package it.polimi.ingsw.model;

public class AssistantCard
{
    
}
