package it.polimi.ingsw.model;

public class IslandTile
{

}
