package it.polimi.ingsw.model;

/**
 * Game colors enumeration for students and professors
 */
public enum SchoolColor
{
    BLUE, GREEN, PINK, RED, YELLOW;
}