package it.polimi.ingsw.model;

public class Student
{

}
