package it.polimi.ingsw.model;

public class Tower
{

}
