package it.polimi.ingsw.model;

/**
 * Tower colors enumeration
 */

public enum TowerColor
{
    BLACK, GREY, WHITE;
}