package it.polimi.ingsw.model;

/**
 * This class enums the 4 main wizard categories.
 */
public enum Wizard
{
    WIZARD_1, WIZARD_2, WIZARD_3, WIZARD_4;
}
